ARROW-13081: [C++] Apply suggestions